--- a/build.gradle
+++ b/build.gradle
@@ -35,7 +35,7 @@ jar.manifest.attributes('Main-Class': mainClassName)
 
 repositories {
     //mavenLocal()
-    jcenter()
+    mavenCentral()
 }
 
 dependencies {
