--- a/build.gradle
+++ b/build.gradle
@@ -9,11 +9,14 @@ targetCompatibility = JavaVersion.VERSION_1_8
 // current version of the Engine:
 ext.jmonkeyengineVersion = '3.5.0-stable'
 
-tasks.withType(JavaCompile) { // compile-time options:
+tasks.withType(JavaCompile) { // Java compile-time options:
     options.compilerArgs << '-Xdiags:verbose'
     options.compilerArgs << '-Xlint:unchecked'
-    //options.deprecation = true
+    //options.deprecation = true // to provide detailed deprecation warnings
     options.encoding = 'UTF-8'
+    if (JavaVersion.current().isCompatibleWith(JavaVersion.VERSION_1_10)) {
+        options.release = 8
+    }
 }
 
 tasks.withType(JavaExec) { // runtime options:
@@ -33,7 +36,7 @@ if (!hasProperty('mainClass')) {
 jar.manifest.attributes('Main-Class': mainClassName)
 
 repositories {
-    //mavenLocal()
+    //mavenLocal() // to find local SNAPSHOTs of libraries
     mavenCentral()
 }
 
@@ -45,13 +48,15 @@ dependencies {
     runtimeOnly 'org.jmonkeyengine:jme3-desktop:' + jmonkeyengineVersion
 
     // RyzomConverter doesn't use jme3-jogg nor jme3-plugins
-    //  -- they are included solely to avoid warnings from AssetConfig
+    //  -- they are included solely to avoid warnings from AssetConfig.
     runtimeOnly 'org.jmonkeyengine:jme3-jogg:' + jmonkeyengineVersion
     runtimeOnly 'org.jmonkeyengine:jme3-plugins:' + jmonkeyengineVersion
 }
 
-// cleanup tasks
+// cleanup tasks:
+
 clean.dependsOn('cleanWrittenAssets')
-task cleanWrittenAssets(type: Delete) {
+
+task cleanWrittenAssets(type: Delete) { // output directory
     delete 'assets/ryzom-assets/export'
 }
