--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,5 @@
+// Gradle build script for the RyzomConverter project
+
 plugins {
     id 'application'
     id 'java'
@@ -19,7 +21,7 @@ tasks.withType(JavaCompile) { // Java compile-time options:
     }
 }
 
-tasks.withType(JavaExec) { // runtime options:
+tasks.withType(JavaExec) { // Java runtime options:
     args = ['../RyzomAssets']
     //args = ['../RyzomAssets', 'noanimations'] // models only
     //args = ['../RyzomAssets', 'nomodels'] // animations only
