--- a/build.gradle
+++ b/build.gradle
@@ -5,11 +5,10 @@ plugins {
     id 'java'
 }
 
+ext.jme3Version = '3.5.2-stable' // current version of JMonkeyEngine
+
 sourceCompatibility = JavaVersion.VERSION_1_8
 targetCompatibility = JavaVersion.VERSION_1_8
-
-// current version of the Engine:
-ext.jmonkeyengineVersion = '3.5.2-stable'
 
 tasks.withType(JavaCompile) { // Java compile-time options:
     options.compilerArgs << '-Xdiags:verbose'
@@ -46,13 +45,13 @@ dependencies {
     implementation 'org.apache.directory.studio:org.apache.commons.io:2.4'
     compileOnly 'org.realityforge.javax.annotation:javax.annotation:1.0.1'
 
-    implementation 'org.jmonkeyengine:jme3-core:' + jmonkeyengineVersion
-    runtimeOnly 'org.jmonkeyengine:jme3-desktop:' + jmonkeyengineVersion
+    implementation 'org.jmonkeyengine:jme3-core:' + jme3Version
+    runtimeOnly    'org.jmonkeyengine:jme3-desktop:' + jme3Version
 
     // RyzomConverter doesn't use jme3-jogg nor jme3-plugins
     //  -- they are included solely to avoid warnings from AssetConfig.
-    runtimeOnly 'org.jmonkeyengine:jme3-jogg:' + jmonkeyengineVersion
-    runtimeOnly 'org.jmonkeyengine:jme3-plugins:' + jmonkeyengineVersion
+    runtimeOnly 'org.jmonkeyengine:jme3-jogg:' + jme3Version
+    runtimeOnly 'org.jmonkeyengine:jme3-plugins:' + jme3Version
 }
 
 // cleanup tasks:
