--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,7 @@ plugins {
     id 'application'
 }
 
-ext.jme3Version = '3.5.2-stable' // current version of JMonkeyEngine
+ext.jme3Version = '3.6.0-beta1' // current version of JMonkeyEngine
 
 sourceCompatibility = JavaVersion.VERSION_1_8
 targetCompatibility = JavaVersion.VERSION_1_8
