build.gradle:  option to find staged libraries

--- a/build.gradle
+++ b/build.gradle
@@ -39,6 +39,7 @@ configurations.all {
 repositories {
     //mavenLocal() // to find local SNAPSHOTs of libraries
     mavenCentral()
+    //maven { url 'https://s01.oss.sonatype.org/content/groups/staging' } // to find libraries staged but not yet released
 }
 
 dependencies {
