--- a/build.gradle
+++ b/build.gradle
@@ -6,8 +6,10 @@ plugins {
 
 ext.jme3Version = '3.6.1-stable' // current version of JMonkeyEngine
 
-sourceCompatibility = JavaVersion.VERSION_1_8
-targetCompatibility = JavaVersion.VERSION_1_8
+java {
+    sourceCompatibility = JavaVersion.VERSION_1_8
+    targetCompatibility = JavaVersion.VERSION_1_8
+}
 
 tasks.withType(JavaCompile) { // Java compile-time options:
     options.compilerArgs << '-Xdiags:verbose'
