--- a/build.gradle
+++ b/build.gradle
@@ -39,9 +39,10 @@ configurations.configureEach {
    resolutionStrategy.cacheChangingModulesFor 0, 'seconds' // to disable caching of SNAPSHOTs
 }
 repositories {
-    //mavenLocal() // to find local SNAPSHOTs of libraries
-    mavenCentral()
+    //mavenLocal() // to find libraries installed locally
+    mavenCentral() // to find libraries released to the Maven Central repository
     //maven { url 'https://s01.oss.sonatype.org/content/groups/staging' } // to find libraries staged but not yet released
+    //maven { url 'https://s01.oss.sonatype.org/content/repositories/snapshots' } // to find public SNAPSHOTs of libraries
 }
 
 dependencies {
