test JME v3.7.0-beta1

--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,7 @@ plugins {
     id 'application'
 }
 
-ext.jme3Version = '3.7.0-alpha3.1' // current version of JMonkeyEngine
+ext.jme3Version = '3.7.0-beta1' // current version of JMonkeyEngine
 
 java {
     sourceCompatibility = JavaVersion.VERSION_1_8
