--- a/build.gradle
+++ b/build.gradle
@@ -4,8 +4,6 @@ plugins {
     id 'application'
 }
 
-ext.jme3Version = '3.7.0-beta1' // current version of JMonkeyEngine
-
 java {
     sourceCompatibility = JavaVersion.VERSION_1_8
     targetCompatibility = JavaVersion.VERSION_1_8
@@ -46,16 +44,16 @@ repositories {
 }
 
 dependencies {
-    implementation 'org.apache.directory.studio:org.apache.commons.io:2.4'
-    compileOnly 'org.realityforge.javax.annotation:javax.annotation:1.0.1'
+    implementation(libs.commons.io)
+    compileOnly(libs.javax.annotation)
 
-    implementation 'org.jmonkeyengine:jme3-core:' + jme3Version
-    runtimeOnly    'org.jmonkeyengine:jme3-desktop:' + jme3Version
+    implementation(libs.jme3.core)
+    runtimeOnly(libs.jme3.desktop)
 
     // RyzomConverter doesn't use jme3-jogg nor jme3-plugins
     //  -- they are included solely to avoid warnings from AssetConfig.
-    runtimeOnly 'org.jmonkeyengine:jme3-jogg:' + jme3Version
-    runtimeOnly 'org.jmonkeyengine:jme3-plugins:' + jme3Version
+    runtimeOnly(libs.jme3.jogg)
+    runtimeOnly(libs.jme3.plugins)
 }
 
 // Register cleanup tasks:
