--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 // Gradle script to build the RyzomConverter project
 
 plugins {
-    id 'application'
+    id 'application' // to build JVM applications
 }
 
 java {
