--- a/build.gradle
+++ b/build.gradle
@@ -11,6 +11,10 @@ java {
 
 tasks.withType(JavaCompile).configureEach { // Java compile-time options:
     options.compilerArgs << '-Xdiags:verbose'
+    if (JavaVersion.current().isCompatibleWith(JavaVersion.VERSION_20)) {
+        // Suppress warnings that source value 8 is obsolete.
+        options.compilerArgs << '-Xlint:-options'
+    }
     options.compilerArgs << '-Xlint:unchecked'
     //options.deprecation = true // to provide detailed deprecation warnings
     options.encoding = 'UTF-8'
