libs.versions.toml:  comment and whitespace

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,4 +1,4 @@
-## catalog of libraries and plugins used to build the RyzomConverter project
+## catalog of libraries and plugins used to build and run the RyzomConverter project
 
 [versions]
 
@@ -8,6 +8,7 @@ jme = "3.8.1-stable"
 
 commons-io = "org.apache.directory.studio:org.apache.commons.io:2.4"
 javax-annotation = "org.realityforge.javax.annotation:javax.annotation:1.1.1"
+
 jme3-core = { module = "org.jmonkeyengine:jme3-core", version.ref = "jme" }
 jme3-desktop = { module = "org.jmonkeyengine:jme3-desktop", version.ref = "jme" }
 jme3-jogg = { module = "org.jmonkeyengine:jme3-jogg", version.ref = "jme" }
